// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Errors accepts props 1`] = `
<p
  className="error-message error-class test"
  id="errorId"
>
  Test Error
</p>
`;

exports[`Errors does not render without child 1`] = `null`;

exports[`Errors renders with child 1`] = `
<p
  className="error-message"
>
  Test Error
</p>
`;
